fix: [SRM-10537]: Fix layout collapse in verify step logs screen (#8811)

--- a/src/modules/85-cv/components/ExecutionVerification/components/LogAnalysisContainer/LogAnalysis.module.scss
+++ b/src/modules/85-cv/components/ExecutionVerification/components/LogAnalysisContainer/LogAnalysis.module.scss
@@ -8,7 +8,7 @@
 .logsTab {
   height: 100%;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: minmax(500px, 1fr) 1fr;
   overflow: hidden !important;
 
   .tableContent {
